# test

./: CMakeLists.txt  Queue.go  coverage.html  coverage.out  go.mod  queue_test.go
BenchmarkApp/: main  main.cpp
CLEARGOQUEUE/: Queue.go
CPPCODE/: DynamicArray.cpp  FBTCheck  FBTCheck.cpp  FListCheck  FListCheck.cpp  LListCheck  LListCheck.cpp  QueueCheck  QueueCheck.cpp  StackCheck  StackCheck.cpp  hashCheck  hashCheck.cpp  library.h  vectorCheck  vectorCheck.cpp
laba1/: commands.txt  file.flist  file.llist  main  main.cpp
src/: DynamicArray.cpp  DynamicArray.h  FBT.cpp  FBT.h  ForwardList.cpp  ForwardList.h  LinkedList.cpp  LinkedList.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  hash.cpp  hash.h  main.cpp
tests/: test.cpp  test_DynamicArray.cpp  test_FBT.cpp  test_ForwardList.cpp  test_LinkedList.cpp  test_Queue.cpp  test_Stack.cpp  test_hash.cpp
